--- a/AUTHORS
+++ b/AUTHORS
@@ -3,4 +3,6 @@
 
 Jennifer Huang <133@holbertonschool.com>
 Alexa Orrico <210@holbertonschool.com>
-Joann Vuong <130@holbertonschool.com> 
+Joann Vuong <130@holbertonschool.com>
+Jesenia Bernal <6935@holbertonstudents.com>
+Cristina Rodriguez <6925@holbertonstudents.com>
